--- a/01-color_flipper/final/hex.html
+++ b/01-color_flipper/final/hex.html
@@ -3,14 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
-
-    <title>Color Flipper || Simple</title>
+    <title>Color Flipper || Hex</title>
 
     <!-- styles -->
     <link rel="stylesheet" href="styles.css" />
   </head>
+
   <body>
     <nav>
       <div class="nav-center">
@@ -28,6 +26,6 @@
       </div>
     </main>
     <!-- javascript -->
-    <script src="app.js"></script>
+    <script src="hex.js"></script>
   </body>
 </html>
